before react bootstrap version change

--- a/src/components/Sidebar/sidebar.module.scss
+++ b/src/components/Sidebar/sidebar.module.scss
@@ -1,17 +1,56 @@
 .navContainer {
-  width: 30%;
+  width: 300px;
   height: 100vh;
   background-color: lightskyblue;
+  position: absolute;
+  z-index: -1;
 }
 
+.logo {
+  margin-bottom: 30px;
+  border-bottom: 1px solid #ccc;
+  display: grid;
+  place-items: center;
+  img {
+    height: 80px;
+    position: relative;
+    left: -10px;
+  }
+}
 .navlist {
   list-style: none;
-  a {
-    text-decoration: none;
-    color: #333;
+  padding: 10px;
 
-    i {
-      margin-right: 10px;
+  li {
+    margin-bottom: 2px;
+    padding: 10px;
+    border-radius: 4px;
+    text-align: left;
+    &:nth-child(3) {
+      background-color: lightblue;
     }
   }
+
+  a {
+    text-decoration: none;
+    color: #fff;
+    text-transform: uppercase;
+    font-size: 12px;
+    font-weight: bold;
+    position: relative;
+    top: -2px;
+
+    &:hover {
+      color: #333;
+    }
+
+    i {
+      margin-right: 15px;
+      font-size: 20px;
+    }
+  }
+}
+
+.active {
+  background-color: red;
 }
