--- a/src/pages/userInterception/UserInterceptionReport.module.scss
+++ b/src/pages/userInterception/UserInterceptionReport.module.scss
@@ -67,6 +67,45 @@ td {
   left: "40px";
 }
 
-.wrapper {
-  margin-left: 340px;
+.wrapperr {
+  margin-left: 260px;
+
+  label {
+    display: block;
+    opacity: 0.75;
+    text-transform: uppercase;
+    font-size: 12px;
+  }
+  input {
+    width: 100%;
+    padding: 4px 8px;
+    border: 1px solid #ccc;
+    border-radius: 2px;
+  }
+
+  .cardd {
+    margin: 2rem;
+    border-radius: 2px;
+    padding: 0.5rem 2rem 5rem 0.5rem;
+    border-radius: 0.3rem;
+  }
+}
+
+.fileHeading {
+  font-size: 22px;
+  font-weight: 500;
+  background-color: #fff;
+  padding: 1rem 0.5rem;
+  border-bottom: 1px solid #fff;
+  color: #aaa;
+}
+
+.fileHeadingg {
+  padding: 0.5rem !important;
+}
+
+.searchBtn {
+  color: #fff !important;
+  margin-top: 20px;
+  width: 150px;
 }
