--- a/src/pages/cleanliness/CleanlinessReport.module.scss
+++ b/src/pages/cleanliness/CleanlinessReport.module.scss
@@ -1,108 +1,87 @@
-//User Report .css copied and pasted
-.card .content {
-  padding: 2rem;
+.wrapperr {
+  margin-left: 260px;
+
+  label {
+    display: block;
+    opacity: 0.75;
+    text-transform: uppercase;
+    font-size: 12px;
+  }
+  input {
+    width: 100%;
+    padding: 6px 15px;
+    border: 1px solid #ccc;
+    border-radius: 2px;
+    font-size: 15px;
+  }
+
+  .cardd {
+    margin: 2rem;
+    border-radius: 2px;
+    padding: 0.5rem 2rem 5rem 0.5rem;
+    border-radius: 0.3rem;
+  }
 }
 
-.userImage {
-  width: 30px;
-  height: 30px;
-  border-radius: 50%;
-  cursor: pointer;
-  margin: 0 2px;
+.fileHeading {
+  padding: 1rem 0.5rem;
+  border-bottom: 1px solid #fff;
+}
+
+.topBar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #fff;
+  color: #aaa;
+  font-weight: 400;
+  padding: 0 1rem;
+  padding-right: 3rem;
+  p {
+    margin-bottom: 0;
+    font-size: 22px;
+    &:last-child {
+      cursor: pointer;
+    }
+  }
+}
+
+.fileHeadingg {
+  font-size: 22px;
+  font-weight: 400;
+  background-color: #fff;
+  padding: 1rem 0.5rem;
+  border-bottom: 1px solid #fff;
+  color: #aaa;
+  padding: 0.5rem !important;
+}
+
+.searchBtn {
+  color: #fff !important;
+  margin-top: 20px;
+  width: 150px;
 }
 
 .tableResponsive {
-  overflow: auto;
-  padding: 2rem;
-  margin: 30px;
-  overflow-y: scroll;
-  max-height: 450px;
+  max-height: 500px;
+  margin-top: 50px;
 }
 
-td {
+th {
+  font-weight: 400;
+  text-transform: uppercase;
+}
+
+td,
+th {
   min-width: 150px !important;
+  font-size: 13px !important;
+  padding: 0.8rem !important;
 }
 
-.para {
-  margin-top: 30px;
-  color: #ccc;
-  margin-left: 40%;
-}
-
-@media (max-width: 991px) {
-  .tableResponsive {
-    overflow: auto !important;
-    padding: 2rem;
-    margin: 30px;
-    width: 90%;
-    overflow-y: scroll;
-    max-height: 450px;
-  }
-}
-
-.modall {
-  width: max-content;
-  // width: 50%;
-  max-width: 70%;
-  height: 50%;
-  position: fixed;
-  // background-color: orange;
-  top: 40%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  // background-color: #fff;
-  z-index: 5;
-  box-shadow: 0 0 5px 1px #333;
-}
-
-.closeModal {
-  position: absolute;
-  top: -5px;
-  right: -35px;
-  font-size: 25px;
-  cursor: pointer;
-}
-
-.userImageModal {
-  width: 100%;
-  height: 100%;
-  object-fit: fill;
-}
-
-.overlayy {
-  width: 100%;
-  height: 100vh;
-  position: fixed;
-  z-index: 2;
-  top: 0;
-  left: 0;
-  background: rgba(0, 0, 0, 0.6);
-  backdrop-filter: blur(3px);
-}
-
-.textWhite {
-  color: #fff !important;
-}
-
-.downloadBtn {
-  width: 100%;
-  max-width: 150px;
-  margin: auto;
-  display: block;
-  background-color: #e28400;
-  border-radius: 5px;
-  padding: 10px 20px;
-  font-size: 14px;
-  transition: all;
-  transition-duration: 0.3s;
-  box-shadow: 0 0 2px 2px #ccc;
-  color: #fff;
-
-  a {
-    color: #fff;
-  }
-
-  &:hover {
-    background-color: black;
-  }
+.noDataText {
+  margin-top: 3rem;
+  margin-left: 50%;
+  opacity: 0.5;
+  transform: translateX(-10%);
 }
