--- a/src/pages/userInterception/UserInterceptionReport.module.scss
+++ b/src/pages/userInterception/UserInterceptionReport.module.scss
@@ -1,72 +1,3 @@
-.card .content {
-  padding: 2rem;
-}
-
-.form-controll {
-  width: 100%;
-  max-width: 600px;
-}
-
-.tableResponsive {
-  overflow: auto;
-  padding: 2rem;
-  margin: 30px;
-  overflow-y: scroll;
-  max-height: 450px;
-}
-
-td {
-  min-width: 150px !important;
-}
-
-.para {
-  margin-top: 30px;
-  color: #ccc;
-  margin-left: 40%;
-}
-
-@media (max-width: 991px) {
-  .tableResponsive {
-    overflow: auto !important;
-    padding: 2rem;
-    margin: 30px;
-    width: 90%;
-    overflow-y: scroll;
-    max-height: 450px;
-  }
-}
-
-.downloadBtn {
-  width: 100%;
-  max-width: 150px;
-  margin: auto;
-  display: block;
-  background-color: #e28400;
-  border-radius: 5px;
-  padding: 10px 20px;
-  font-size: 14px;
-  transition: all;
-  transition-duration: 0.3s;
-  box-shadow: 0 0 2px 2px #ccc;
-  color: #fff;
-
-  a {
-    color: #fff;
-  }
-
-  &:hover {
-    background-color: black;
-  }
-}
-
-.location {
-  height: "35px";
-  width: "35px";
-  position: "absolute";
-  top: "0px";
-  left: "40px";
-}
-
 .wrapperr {
   margin-left: 260px;
 
@@ -78,9 +9,10 @@ td {
   }
   input {
     width: 100%;
-    padding: 4px 8px;
+    padding: 6px 15px;
     border: 1px solid #ccc;
     border-radius: 2px;
+    font-size: 15px;
   }
 
   .cardd {
@@ -92,15 +24,35 @@ td {
 }
 
 .fileHeading {
+  padding: 1rem 0.5rem;
+  border-bottom: 1px solid #fff;
+}
+
+.topBar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #fff;
+  color: #aaa;
+  font-weight: 400;
+  padding: 0 1rem;
+  padding-right: 3rem;
+  p {
+    margin-bottom: 0;
+    font-size: 22px;
+    &:last-child {
+      cursor: pointer;
+    }
+  }
+}
+
+.fileHeadingg {
   font-size: 22px;
-  font-weight: 500;
+  font-weight: 400;
   background-color: #fff;
   padding: 1rem 0.5rem;
   border-bottom: 1px solid #fff;
   color: #aaa;
-}
-
-.fileHeadingg {
   padding: 0.5rem !important;
 }
 
@@ -108,4 +60,28 @@ td {
   color: #fff !important;
   margin-top: 20px;
   width: 150px;
+}
+
+.tableResponsive {
+  max-height: 500px;
+  margin-top: 50px;
+}
+
+th {
+  font-weight: 400;
+  text-transform: uppercase;
+}
+
+td,
+th {
+  min-width: 150px !important;
+  font-size: 13px !important;
+  padding: 0.8rem !important;
+}
+
+.noDataText {
+  margin-top: 3rem;
+  margin-left: 50%;
+  transform: translateX(-10%);
+  opacity: 0.5;
 }
