user report, and attendance report done

--- a/src/components/Sidebar/sidebar.module.scss
+++ b/src/components/Sidebar/sidebar.module.scss
@@ -64,8 +64,6 @@
   background-color: red;
 }
 
-@media (max-width: 768px) {
-  .navContainer {
-    display: none;
-  }
+.disabledLink {
+  pointer-events: none;
 }
