--- a/src/pages/commonStyles.module.scss
+++ b/src/pages/commonStyles.module.scss
@@ -5,7 +5,8 @@
     display: block;
     opacity: 0.75;
     text-transform: uppercase;
-    font-size: 12px;
+    font-size: 12px !important;
+    color: #333 !important;
   }
   input {
     width: 100%;
@@ -66,11 +67,7 @@
 .tableResponsive {
   max-height: 500px;
   margin-top: 50px;
-}
-
-th {
-  font-weight: 400;
-  text-transform: uppercase;
+  position: relative !important;
 }
 
 td,
@@ -79,12 +76,9 @@ th {
   font-size: 13px !important;
   padding: 0.8rem !important;
 }
-
-.noDataText {
-  margin-top: 3rem;
-  margin-left: 50%;
-  opacity: 0.5;
-  transform: translateX(-10%);
+th {
+  font-weight: 700 !important;
+  text-transform: uppercase;
 }
 
 .downloadBtn {
@@ -111,4 +105,61 @@ th {
     background-color: black;
     color: #fff;
   }
+}
+
+.noDataText {
+  margin-top: 3rem;
+  margin-left: 50%;
+  transform: translateX(-10%);
+  opacity: 0.5;
+}
+
+select {
+  border-radius: 2px !important;
+}
+
+.modall {
+  width: max-content;
+  // width: 50%;
+  max-width: 70%;
+  height: 50%;
+  position: fixed;
+  top: 40%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  // background-color: #fff;
+  z-index: 5;
+  box-shadow: 0 0 5px 1px #333;
+}
+
+.closeModal {
+  position: absolute;
+  top: -5px;
+  right: -35px;
+  font-size: 25px;
+  cursor: pointer;
+}
+
+.userImageModal {
+  width: 100%;
+  height: 100%;
+  // object-fit: contain;
+}
+
+.overlayy {
+  width: 100%;
+  height: 100vh;
+  position: fixed;
+  z-index: 2;
+  top: 0;
+  left: 0;
+  background: rgba(0, 0, 0, 0.6);
+  backdrop-filter: blur(3px);
+}
+
+.userImage {
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  cursor: pointer;
 }
