--- a/src/components/Sidebar/sidebar.module.scss
+++ b/src/components/Sidebar/sidebar.module.scss
@@ -68,3 +68,9 @@
   pointer-events: none;
   cursor: no-drop !important;
 }
+
+// @media (max-width: 768px) {
+//   .navContainer {
+//     display: none;
+//   }
+// }
