--- a/src/pages/commonStyles.module.scss
+++ b/src/pages/commonStyles.module.scss
@@ -163,3 +163,9 @@ select {
   border-radius: 50%;
   cursor: pointer;
 }
+
+// @media (max-width: 768px) {
+//   .wrapperr {
+//     margin-left: 0px;
+//   }
+// }
