--- a/src/pages/commonStyles.module.scss
+++ b/src/pages/commonStyles.module.scss
@@ -24,6 +24,12 @@
   }
 }
 
+@media (max-width: 850px) {
+  .wrapperr {
+    margin-left: 0;
+  }
+}
+
 .fileHeading {
   padding: 1rem 0.5rem;
   border-bottom: 1px solid #fff;
@@ -68,6 +74,8 @@
   max-height: 500px;
   margin-top: 50px;
   position: relative !important;
+  // box-shadow: rgb(9 30 66 / 25%) 0px 4px 8px -2px,
+  //   rgb(9 30 66 / 8%) 0px 0px 0px 1px;
 }
 
 td,
@@ -86,6 +94,7 @@ th {
   max-width: 150px;
   margin: auto;
   margin-top: 50px;
+  margin-bottom: 20px;
   display: block;
   background-color: #e28400;
   border-radius: 5px;
@@ -96,6 +105,7 @@ th {
   box-shadow: 0 0 2px 2px #ccc;
   color: #fff;
   text-decoration: none !important;
+  text-align: center;
 
   a {
     color: #fff;
@@ -164,8 +174,13 @@ select {
   cursor: pointer;
 }
 
-// @media (max-width: 768px) {
-//   .wrapperr {
-//     margin-left: 0px;
-//   }
-// }
+@media (max-width: 850px) {
+  .wrapperr {
+    margin-left: 0px;
+
+    .cardd {
+      margin: 0.5rem;
+      padding: 0;
+    }
+  }
+}
