--- a/src/pages/login/Login.module.scss
+++ b/src/pages/login/Login.module.scss
@@ -10,38 +10,60 @@
   padding: 60px;
   min-height: 550px;
   // prettier-ignore
-  background: radial-gradient(ellipse at left bottom,#f93 0,rgba(255,153,51,.5) 59%,rgba(255,153,51,.5) 100%);
-  box-shadow: 0 50px 70px -20px rgb(0 0 0 / 80%);
+  // background: radial-gradient(ellipse at left bottom,#f93 0,rgba(255,153,51,.5) 59%,rgba(255,153,51,.5) 100%);
+  background-color: #333;
+  box-shadow: rgba(0, 0, 0, 0.56) 0px 22px 70px 4px;
+  border-radius: 15px;
 }
 
 .formControl {
   display: flex;
   flex-direction: column;
   &:first-child {
-    margin-bottom: 30px;
+    margin-bottom: 40px;
     margin-top: 30px;
   }
 
   input {
-    padding: 0.8rem;
+    padding: 0.6rem 1.5rem;
     outline: none;
     border: none;
     font-size: 120%;
+    border-radius: 50px;
+    background-color: #eeeddd;
+    font-family: sans-serif;
   }
 }
 
 label {
-  font-size: 22px !important;
+  font-size: 18px !important;
   color: #fff !important;
   font-weight: bold !important;
   margin-bottom: 10px;
+  margin-left: 10px;
+  align-self: flex-start;
 }
 
 .loginButton {
-  background-color: orange;
+  background-color: rgb(255, 115, 0);
   font-size: 18px;
   padding: 0.6rem;
   color: #fff;
+  margin: auto;
   margin-top: 4rem;
   border: none;
+  border-radius: 50px;
+  width: 50%;
+  transition: 300ms all;
+}
+.loginButton:hover {
+  transform: translateY(-5px);
+  background-color: orange;
+}
+
+@media (max-width: 850px) and (max-height: 900px) {
+  .formContainer {
+    min-height: 400px;
+    padding: 15px;
+  }
 }
